--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,13 @@
 <h1>Listing recipes</h1>
 
+<% form_tag :action => 'search' do %>
+	<p> Search for a recipe:
+	<%= text_field_tag 'input' %></p>
+	
+	<%= submit_tag 'Search' %>
+<% end %>
+
+
 <table>
   <tr>
     <th>Title</th>
