--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -12,8 +12,8 @@
     <%= f.text_area :review %>
   </p>
   <p>
-    <%= f.label :stars %><br />
-    <%= f.text_field :stars %>
+    <%= f.label :rating %><br />
+    <%= f.text_field :rating %>
   </p>
   <p>
     <%= f.label :recipe_id %><br />
