--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -36,4 +36,4 @@
 
 <%= link_to 'Edit', edit_recipe_path(@recipe) %> |
 <%= link_to 'Back', recipes_path %> | 
-<%= link_to 'Add Review', new_review_path%>
+<%= link_to 'Add Review', new_review_path(:id=>@recipe.id)%>
