Create recipes with ingredients

--- a/app/views/ingredients/edit.html.erb
+++ b/app/views/ingredients/edit.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :unit %>
   </p>
   <p>
-    <%= f.label :type %><br />
-    <%= f.text_field :type %>
+    <%= f.label :section %><br />
+    <%= f.text_field :section %>
   </p>
   <p>
     <%= f.label :recipe_id %><br />
