--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -5,7 +5,7 @@
     <th>Name</th>
     <th>Number</th>
     <th>Unit</th>
-    <th>Type</th>
+    <th>Section</th>
     <th>Recipe</th>
   </tr>
 
@@ -14,7 +14,7 @@
     <td><%=h ingredient.name %></td>
     <td><%=h ingredient.number %></td>
     <td><%=h ingredient.unit %></td>
-    <td><%=h ingredient.type %></td>
+    <td><%=h ingredient.section %></td>
     <td><%=h ingredient.recipe_id %></td>
     <td><%= link_to 'Show', ingredient %></td>
     <td><%= link_to 'Edit', edit_ingredient_path(ingredient) %></td>
