--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -15,14 +15,30 @@
     <%= f.label :completion_time %><br />
     <%= f.text_field :completion_time %>
   </p>
+  <h2>Ingredients</h2>
+  <% f.fields_for :ingredients do |ingredient_form| %>
+  <h3>Ingredient</h3>
   <p>
-    <%= f.label :recipelist_id %><br />
-    <%= f.text_field :recipelist_id %>
+    <%= ingredient_form.label :name %>
+    <%= ingredient_form.text_field :name %>
   </p>
+  <p>
+    <%= ingredient_form.label :number %>
+    <%= ingredient_form.text_field :number %>
+  </p>
+  <p>
+    <%= ingredient_form.label :unit %>
+    <%= ingredient_form.text_field :unit %>
+  </p>
+  <p>
+    <%= ingredient_form.label :section %>
+    <%= ingredient_form.text_field :section %>
+  </p>
+  <% end %>
   <p>
     <%= f.submit 'Update' %>
   </p>
-<% end %>
+ <% end %>
 
 <%= link_to 'Show', @recipe %> |
 <%= link_to 'Back', recipes_path %>
