--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -15,10 +15,27 @@
     <%= f.label :completion_time %><br />
     <%= f.text_field :completion_time %>
   </p>
-  <p>
-    <%= f.label :recipelist_id %><br />
-    <%= f.text_field :recipelist_id %>
-  </p>
+  
+  <h2>Ingredients</h2>
+  <% f.fields_for :ingredients do |ingredient_form| %>
+    <h3>Ingredient</h3>
+    <p>
+      <%= ingredient_form.label :name %>
+      <%= ingredient_form.text_field :name %>
+    </p>
+    <p>
+      <%= ingredient_form.label :number %>
+      <%= ingredient_form.text_field :number %>
+    </p>
+    <p>
+      <%= ingredient_form.label :unit %>
+      <%= ingredient_form.text_field :unit %>
+    </p>
+    <p>
+      <%= ingredient_form.label :section %>
+      <%= ingredient_form.text_field :section %>
+    </p>
+  <% end %>
   <p>
     <%= f.submit 'Create' %>
   </p>
