--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -46,7 +46,8 @@
   </tr>
   <% end %>
 </table>
-
+ 
 <%= link_to 'Edit', edit_recipe_path(@recipe) %>
 <%= link_to 'Back', recipes_path %>
 <%= link_to 'Add Review', new_review_path(:id=>@recipe.id)%>
+<%= link_to 'Add to recipe list', :controller => "recipe_lists", :action => "update2", :id => @recipe.id%>
