--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -29,6 +29,8 @@
 <% end %>
 </table>
 
+
 <br />
 
 <%= link_to 'New recipe', new_recipe_path %>
+<%= link_to 'Recipe list', :controller => 'recipe_lists', :action => 'show', :id => 1 %>
