After creating a review, the back button now goes back to the recipe getting reviewed

--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -20,4 +20,4 @@
 
 
 <%= link_to 'Edit', edit_review_path(@review) %> |
-<%= link_to 'Back', reviews_path %>
+<%= link_to 'Back', recipe_path(@review.recipe_id) %>
