Added 'Show Grocery List' functionality

--- a/app/views/recipe_lists/show.html.erb
+++ b/app/views/recipe_lists/show.html.erb
@@ -21,5 +21,6 @@
 <% end %>
 </table>
 
+<%= link_to 'Show Grocery List', groceryList_path(@recipe_list)%>
 <%= link_to 'Edit', edit_recipe_list_path(@recipe_list) %> |
 <%= link_to 'Back', recipes_path %>
