--- a/app/views/recipe_lists/show.html.erb
+++ b/app/views/recipe_lists/show.html.erb
@@ -16,7 +16,7 @@
     <td><%=h recipe.reviews.count %></td>
     <td><%= link_to 'Show', recipe %></td>
     <td><%= link_to 'Edit', edit_recipe_path(recipe) %></td>
-    <td><%= link_to 'Destroy', recipe, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Destroy', delete_from_recipe_list_path(@recipe_list, recipe), :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
