--- a/app/views/recipe_lists/groceryList.html.erb
+++ b/app/views/recipe_lists/groceryList.html.erb
@@ -8,12 +8,12 @@
 		<th>Section</th>
 	</tr>
 	
-<% @grocery_list.each do |ingredient| %>
+<% @grocery_list.each do |ingredient_amount| %>
 	<tr>
-		<td><%=h ingredient.name%></td>
-		<td><%=h ingredient.number%></td>
-		<td><%=h ingredient.unit%></td>
-		<td><%=h ingredient.section%></td>
+		<td><%=h ingredient_amount.ingredient.name%></td>
+		<td><%=h ingredient_amount.number%></td>
+		<td><%=h ingredient_amount.unit%></td>
+		<td><%=h ingredient_amount.ingredient.section%></td>
 	</tr>
 <% end %>
 
