Rearranged some of the code to create new recipes

--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -19,8 +19,8 @@
   <% f.fields_for :ingredient_amounts do |i| %>
   <h3>Ingredient</h3>
   <p>
-    <%= i.label :ingredient_name %>
-    <%= i.text_field :ingredient_name %>
+    <%= label_tag :ingredient_name %>
+    <%= text_field_tag :ingredient_name, @ingredient_name %>
   </p>
   <p>
     <%= i.label :number %>
