--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -50,4 +50,8 @@
 <%= link_to 'Edit', edit_recipe_path(@recipe) %>
 <%= link_to 'Back', recipes_path %>
 <%= link_to 'Add Review', new_review_path(:id=>@recipe.id)%>
-<%= link_to 'Add to recipe list', :controller => "recipe_lists", :action => "update2", :id => @recipe.id%>
+<% if current_user %>
+	<%= link_to 'Add to recipe list', :controller => "recipe_lists", :action => "update2", :id => @recipe.id, :user => current_user %>
+<% else %>
+	<%= link_to 'Add to recipe list', login_path %>
+<% end %>
