Added some CSS to login/register page and added real creation time

--- a/app/views/layouts/recipes.html.erb
+++ b/app/views/layouts/recipes.html.erb
@@ -42,7 +42,7 @@
 <!-- end #header -->
 <!-- end #header-wrapper -->
 <div id="logo">
-	<h1><a href="#"> FoodRun  </a></h1>
+	<h1><%= link_to 'Foodrun', recipes_path  </a></h1>
 	<p><em> Planning groceries has never been so easy </a></em></p>
 </div>
 <hr />
