--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -16,7 +16,6 @@ body {
 
 h1, h2, h3 {
 	margin: 0;
-	text-transform: uppercase;
 	font-weight: normal;
 	color: #549900;
 }
@@ -449,3 +448,6 @@ hr { display: none; }
 
 #footer a {
 }
+
+/* New Recipe */
+
