--- a/app/views/recipe_lists/groceryList.html.erb
+++ b/app/views/recipe_lists/groceryList.html.erb
@@ -15,7 +15,10 @@
 		<td><%=h ingredient_amount.unit%></td>
 		<td><%=h ingredient_amount.ingredient.section%></td>
 	</tr>
+
 <% end %>
+
+</table>
 
 
 
