Added dynamic sidebar

--- a/app/views/layouts/recipes.html.erb
+++ b/app/views/layouts/recipes.html.erb
@@ -75,23 +75,13 @@
 				<li>
 					<h2>Featured Recipes </h2>
 					<ul>
-						<li><a href="#">Beef Lasagna</a></li>
-						<li><a href="#">Goat Cheese Ravioli</a></li>
-						<li><a href="#">Beef Noodle Soup</a></li>
-						<li><a href="#">Honeymustard chicken</a></li>
-						<li><a href="#">Meatloaf</a></li>
-						<li><a href="#">Pepperoni Pizza</a></li>
-						<li><a href="#">Grilled Cheese</a></li>
-						<li><a href="#">Tuna Melt</a></li>
+					       <%= render "shared/featured_recipes" %> 
 					</ul>
 				</li>
 				<li>
 					<h2>Top Recipes</h2>
 					<ul>
-						<li><a href="#">Baby crab cakes</a></li>
-						<li><a href="#">Chicken cutlet submarines</a></li>
-						<li><a href="#">Manhattan Clam Chower</a></li>
-						<li><a href="#">Eggrolls</a></li>
+						<%= render "shared/top_recipes" %>
 					</ul>
 				</li>
 			</ul>
