Added average rating to recipes

--- a/app/views/shared/_top_recipes.erb
+++ b/app/views/shared/_top_recipes.erb
@@ -1,3 +1,6 @@
 <% @top_recipes.each do |recipe| %>
-   <li><%= link_to recipe.title, recipe %></li>
+   <li><%= link_to recipe.title, recipe %>   
+       <br>Rating: <%= recipe.average_rating %>
+   </li>  
+
 <% end %>
