Added cucumber testing for displaying average review

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -13,6 +13,11 @@
   <%=h @recipe.completion_time %>
 </p>
 
+<p>
+	<b> Average Review:</b>
+	<%=h @recipe.average_rating %>
+</p>
+
 <h3>Ingredients</h3>
 <table>
   <tr>
