--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,6 +1,6 @@
  <h1>New recipe</h1>
 
-<% form_for(@recipe) do |f| %>
+<% form_for @recipe, :html => {:multipart => true} do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -14,6 +14,10 @@
   <p>
     <%= f.label :completion_time %><br />
     <%= f.text_field :completion_time %>
+  </p>
+  
+  <p>
+  	<%= f.file_field :photo  %>
   </p>
   
   <h2>Ingredients</h2>
