--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,62 +1,53 @@
-<p>
-  <b>Title:</b>
-  <%=h @recipe.title %>
-</p>
-
-<p>
-  <b>Directions:</b>
-  <%=h @recipe.directions %>
-</p>
-
-<p>
-  <b>Completion time:</b>
-  <%=h @recipe.completion_time %>
-</p>
-
-<p>
-	<b> Average Review:</b>
-	<%=h @recipe.average_rating %>
-</p>
-
-<h3>Ingredients</h3>
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Number</th>
-    <th>Unit</th>
-    <th>Section</th>
-  </tr>
-<% for ingred_amount in @recipe.ingredient_amounts %>
-  <tr>
-    <td><%=h ingred_amount.ingredient.name %></td>
-    <td><%=h ingred_amount.number %></td>
-    <td><%=h ingred_amount.unit %></td>
-    <td><%=h ingred_amount.ingredient.section %></td>
-  </tr>
-<% end %>
-</table>
-
-<h3>Reviews</h3>
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Review</th>
-    <th>Rating</th>
-  </tr>
-<% for review in @recipe.reviews %>
-  <tr>
-    <td><%=h review.title %></td>
-    <td><%=h review.review %></td>
-    <td><%=h review.rating %></td>
-  </tr>
-  <% end %>
-</table>
- 
-<%= link_to 'Edit', edit_recipe_path(@recipe) %>
-<%= link_to 'Back', recipes_path %>
-<%= link_to 'Add Review', new_review_path(:id=>@recipe.id)%>
-<% if current_user %>
-	<%= link_to 'Add to recipe list', :controller => "recipe_lists", :action => "update2", :id => @recipe.id, :user => current_user %>
-<% else %>
-	<%= link_to 'Add to recipe list', login_path %>
-<% end %>
+<div id="show_recipe_wrap">
+	
+	<div id="show_recipe_header">
+		<h1 class="title"> <%=h @recipe.title %> </h1>
+		<p class="meta"> <span class="posted_by"> Posted by <a href="#">Someone</a> </span> | <b><%=h @recipe.completion_time %> minutes </b> completion time</p>
+	</div>
+	
+	<div id="directions_column">
+		<h2>Directions</h2>
+		<div class="directions">
+			<%=h @recipe.directions %>
+		</div>
+	</div>
+		
+	<div id="ingredients_column">
+		<h2>Ingredients</h2>
+		<% for ingred_amount in @recipe.ingredient_amounts %>
+			<div class="ingredient">
+				<%=h ingred_amount.number %>
+			    <%=h ingred_amount.unit %>
+			    <%=h ingred_amount.ingredient.name %>
+			</div>
+		<% end %>
+	</div>
+	
+	<div id="show_recipe_footer">
+		<h2>Reviews</h2>
+		
+		<p>
+			<b> Average Review:</b>
+			<%=h @recipe.average_rating %> stars
+		</p>
+		
+		<% @recipe.reviews.each do |review| %>
+			<div class="post">
+				<div class="reviewtitle"> <%= review.rating %> stars. <%= link_to review.title, review %></div>
+				<p class="meta"><span class="date"> <%= review.created_at.asctime %> Posted by <a href="#">Someone</a></p>
+				<div class="entry">
+				<%=review.review%>
+				</div>
+			</div>
+		<% end %>
+		 
+		<%= link_to 'Edit Recipe', edit_recipe_path(@recipe) %> |
+		<%= link_to 'Back to Recipes', recipes_path %> |
+		<%= link_to 'Add Review', new_review_path(:id=>@recipe.id)%> |
+		<% if current_user %>
+			<%= link_to 'Add to recipe list', :controller => "recipe_lists", :action => "update2", :id => @recipe.id, :user => current_user %>
+		<% else %>
+			<%= link_to 'Add to recipe list', login_path %>
+		<% end %>
+	</div>
+</div>
