--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -16,13 +16,8 @@
     <%= f.text_field :rating %>
   </p>
   <p>
-    <%= f.label :recipe_id %><br />
-    <%= f.text_field :recipe_id %>
-  </p>
-  <p>
     <%= f.submit 'Update' %>
   </p>
 <% end %>
 
-<%= link_to 'Show', @review %> |
-<%= link_to 'Back', reviews_path %>
+<%= link_to 'Back', @review %>
