--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -17,7 +17,8 @@
   </p>
   
   <p>
-  	<%= f.file_field :photo  %>
+  	<%= f.label :photo %> <br />
+  	<div class="resize"> <%= f.file_field :photo  %> </div>
   </p>
   
   <h2>Ingredients</h2>
