--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -4,7 +4,7 @@
 		<h1 class="title"> <%=h @recipe.title %> </h1>
 		<p class="meta"> <span class="posted_by"> Posted by <a href="#">Someone</a> </span> | <b><%=h @recipe.completion_time %> minutes </b> completion time</p>
 		<p>
-			<%= image_tag @recipe.photo.url%>
+			<div class="resize"> <%= image_tag @recipe.photo.url%> </div>
 		</p>
 	</div>
 	
