--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -6,6 +6,9 @@
 		<p>
 			<div class="resize"> <%= image_tag @recipe.photo.url%> </div>
 		</p>
+		<p>
+			<%= @recipe.description %>
+		</p>
 	</div>
 	
 	<div id="directions_column">
