--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -7,6 +7,12 @@
     <%= f.label :title %><br />
     <%= f.text_field :title %>
   </p>
+  
+  <p>
+  	<%= f.label :description %><br />
+    <%= f.text_field :description %>
+  </p>
+  
   <p>
     <%= f.label :directions %><br />
     <%= f.text_area :directions %>
