--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -8,7 +8,7 @@ New User
 
 <% @recipes.each do |recipe| %>
 <div class="post">
-	<p class="meta"><span class="date"> <%= recipe.created_at.asctime %> Posted by <a href="#">Someone</a></p>
+	<p class="meta"><span class="date"> <%= recipe.created_at.asctime %> Posted by <a href="#">recipe.user</a></p>
 	<h2 class="title"><%= link_to recipe.title, recipe %></td></h2>
 	<div class="entry">
 		<%=recipe.directions%>
