--- a/app/views/layouts/calendar.html.erb
+++ b/app/views/layouts/calendar.html.erb
@@ -10,7 +10,8 @@
 </head>
 
 <%= stylesheet_link_tag "base" %>
-<body>
+<body onload="$$('.hidden').invoke('hide')">
+
 <div id="header-wrapper">
 	<div id="header">
 		<div id="menu">
