--- a/app/views/shared/_calendar_recipe_list.erb
+++ b/app/views/shared/_calendar_recipe_list.erb
@@ -1,10 +1,32 @@
 <h2 class="recipe_in_list_header"> Recipe List </h2>
+<% recipe_date_html_id = 0 %>
 <% @recipes.each do |recipe| %>
-   <div class="recipe_in_list">
-    <div class="recipe_in_list_title"> <%= link_to recipe.title, recipe %> </div> 
-    <div class="recipe_in_list_buttons"> 
-		<%= link_to ('<span> Remove from list </span>', {}, :class => 'squarebutton')%>
-		<%= link_to ('<span> Add to Calendar </span>', {}, :class => 'squarebutton')%>
-	</div>
+  <div class="recipe_in_list">
+    <%=h recipe.title %>
+    <%= link_to 'Show', recipe %>
+	
+    
+	<!--
+	<%= link_to 'Remove from list', delete_from_recipe_list_path(@recipe_list, recipe), :confirm => 'Are you sure?', :method => :delete%>
+	-->
+	<span class="hidden" id="recipe_date_<%= recipe_date_html_id %>">		
+	<% form_for :event, :url => { :action => "add_recipe" } do |f| %>
+		
+		<p>
+			<b>Select date </b><br />
+			<%= f.date_select :start_at %>
+		</p>
+		<p>
+			<%= f.submit "Submit" %>
+		</p>
+	<% end %>
+	</span>
+	
+	<span id="calendar_button_<%= recipe_date_html_id %>">
+		<%= button_to_function "Add to calendar", 
+		"$('recipe_date_#{recipe_date_html_id}').toggle(); $('calendar_button_#{recipe_date_html_id}').toggle()" %>
+	</span>
+	
+	<% recipe_date_html_id = recipe_date_html_id + 1 %>
   </div>
 <% end %>
