--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -1,6 +1,10 @@
 <!-- Probably move the stylesheet to you layout. Also make sure you include the javascript. -->
 <%= stylesheet_link_tag "event_calendar" %>
 
-<h1>Calendar</h1>
+<h1 id="calendar_title">Calendar</h1>
 
 <%= event_calendar %>
+
+<div class="grocery_list_div">
+<%= link_to '<span> Show Grocery List </span>', {:controller => "recipe_lists", :action => "groceryList", :id => @recipe_list.id, :user => current_user}, :class=>'squarebutton' %>
+</div>
