--- a/app/views/recipes/showMyRecipes.html.erb
+++ b/app/views/recipes/showMyRecipes.html.erb
@@ -1,26 +1,21 @@
-<h1> <%=current_user.username%>'s recipes </h1>
+<h1 class="uploaded_recipes_title"> <%=current_user.username%>'s recipes </h1>
 
 <% @recipes.each do |recipe| %>
-<div class="post">
-
-	<p class="meta"><span class="date"> <%= recipe.created_at.asctime %> 
-	<% if recipe.user%>
-		Posted by <%= link_to recipe.user.username, :controller => 'recipes' , :action => 'showMyRecipes', :user => recipe.user, :id => '2' %></p>
-	<%end%>
-					
-	<h2 class="title"><%= link_to recipe.title, recipe %> </h2>
-	<div class="entry_and_photos">
-		<div class="recipe_entry">
-			<% if recipe.description%>
-				<%=recipe.description%>
-			<%else %>
-				No Description
-			<%end%>
+<div class="uploaded_recipe">
+	<div class="uploaded_recipes_titlephoto">
+		<h2 class="uploaded_recipes_recipetitle"><%= link_to recipe.title, recipe %> </h2>
+		<div class="uploaded_recipe_resize">
+				<% if recipe.photo.url != "/photos/original/missing.png"%>
+						<%= image_tag recipe.photo.url %>
+				<%end%>
 		</div>
-		<div class="resize2">
-			<% if recipe.photo.url != "/photos/original/missing.png"%>
-					<%= image_tag recipe.photo.url %>
-			<%end%>
+	</div>
+	<div class="uploaded_recipes_options">
+		<div class="buttonwrapper">
+			<%= link_to '<span> Delete </span>', recipe, :confirm => 'Are you sure?', :method => :delete, :class => 'squarebutton' %>
+		</div>
+		<div class="buttonwrapper">
+			<%= link_to '<span> Edit Recipe </span>', edit_recipe_path(recipe), :class => 'squarebutton' %>
 		</div>
 	</div>
 </div>
