--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -794,6 +794,7 @@ color: black;
 .buttonwrapper{ /* Container you can use to surround a CSS button to clear float */
 overflow: hidden; /*See: http://www.quirksmode.org/css/clearing.html */
 width: 100%;
+padding-bottom:10px;
 }
 
 /* Calendar page */
@@ -803,4 +804,47 @@ width: 100%;
 
 #calendar_title{
 	padding-bottom:10px;
+}
+
+/*Uploaded recipes*/
+.uploaded_recipes_titlephoto {
+	float:left;
+	width:150px;
+}
+
+.uploaded_recipe {
+	height:150px;
+	width:500px;
+	border-bottom: 1px solid #E0E0E0;
+	padding-top:20px;
+}
+
+.uploaded_recipe_resize img{
+	width:12em;
+	height:8em;
+}
+
+.uploaded_recipes_recipetitle{
+	padding-bottom:10px;
+}
+
+.uploaded_recipes_recipetitle a {
+	text-decoration: none;
+	text-transform: capitalize;
+	font-size: 30px;
+	color: #64BC31;
+}
+
+.uploaded_recipes_title{
+	padding-bottom:10px;
+}
+
+.uploaded_recipes_options {
+	float:right;
+	width:150px;
+}
+
+.uploaded_recipes_titlephoto {
+	float:left;
+	width:150px;
 }
